add Option Page UI

--- a/temp_homepage.html
+++ b/temp_homepage.html
@@ -24,12 +24,12 @@
 	</script>
 	</head>
 <body>
-<section data-role="page">
+<section id="homepage" data-role="page">
 	<header data-role="header">
 		<h1>
 		Web Clicker
 		</h1>
-		<a href="#" 
+		<a href="#option" 
 			data-icon="gear" 
 			data-iconpos="notext" 
 			data-rel="dialog" 
@@ -56,6 +56,44 @@
 	    <li><a href="#">
 	        <img src="./themes/images/icons-18-black.png">
 	        <h4>Sign In or Sign Up</h4>
+	       </a>
+	    </li>
+	</ul>
+	</article><!-- /content -->	
+</section><!-- /page -->
+
+<section id="option" data-role="page">
+	<header data-role="header">
+		<h1>
+		Options
+		</h1>
+		<a href="#option" 
+			data-icon="gear" 
+			data-iconpos="notext" 
+			data-rel="dialog" 
+			data-transition="fade" 
+			class="ui-btn-right"
+		>Options</a>
+
+	</header><!-- /header -->
+	<article data-role="content">
+		<p>
+			insert introductory word. short and clean
+		</p>
+	<ul data-role="listview" data-inset="false">
+	    <li><a href="#">
+	        <img src="./themes/images/icons-18-black.png">
+	        <h2>Sign Up</h2>
+	        <p></p></a>
+	    </li>
+	    <li><a href="#">
+	        <img src="./themes/images/icons-18-black.png">
+	        <h3>Sign In</h3>
+	        <p></p></a>
+	    </li>
+	    <li><a href="#">
+	        <img src="./themes/images/icons-18-black.png">
+	        <h4>Feedback</h4>
 	       </a>
 	    </li>
 	</ul>
