--- a/temp_homepage.html
+++ b/temp_homepage.html
@@ -29,11 +29,11 @@
 		<h1>
 		Web Clicker
 		</h1>
-		<a href="#popupMenu" data-rel="popup" data-role="button" class="ui-btn-right" data-inline="true" data-transition="flip" data-icon="gear" data-theme="b" data-position-to="origin">Options...</a>
+		<a href="#popupMenu" data-rel="popup" data-role="button" class="ui-btn-right" data-inline="true" data-transition="pop" data-icon="gear" data-theme="b" data-position-to="origin">Options...</a>
 	<div data-role="popup" id="popupMenu" data-theme="d" data-overlay-theme="b">
         <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="d" >
             <li data-role="divider" data-theme="b">Choose an option</li>
-            <li><a href="#signUpPage">Sign Up!</a></li>
+            <li><a href="#signUpPage"><h4>Sign Up!</h4></a></li>
             <li><a href="#signInPage">Sign In</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
