--- a/temp_homepage.html
+++ b/temp_homepage.html
@@ -68,24 +68,47 @@
   <div data-role="content">
     <form action="">
       <div data-role="fieldcontain">
-        <label for="textinput1">
-          Email / Login Name
+        <label for="email">
+          Email
         </label>
-        <input name="email" id="textinput1" placeholder="email@example.com" value=""
-        type="email">
+        <input name="email" id="email" placeholder="email@example.com" value=""
+        type="email" required>
       </div>
       <div data-role="fieldcontain">
-        <label for="textinput3">
-          Alias
+        <label for="account">
+          Account Name (optional)
         </label>
-        <input name="alias" id="textinput3" placeholder="Your public name" value=""
+        <input name="account" id="account" placeholder="Alternative to email for sign in" value=""
         type="text">
       </div>
       <div data-role="fieldcontain">
-        <label for="textinput2">
+        <label for="alias">
+          Default Alias (optional)
+        </label>
+        <input name="alias" id="alias" placeholder="Your default public name" value=""
+        type="text">
+      </div>
+      <div data-role="fieldcontain">
+        <label for="password">
           Password
         </label>
-        <input name="password" id="textinput2" placeholder="" value="" type="password">
+        <input name="password" id="password" placeholder="" value="" type="password" required>
+      </div>
+      <div data-role="fieldcontain">
+        <label for="passwordconfirmation">
+          Confirm Password
+        </label>
+        <input name="passwordconfirmation" id="passwordconfirmation" placeholder="" value="" type="password" oninput="confirmPass(this)" required>
+        <script language='javascript' type='text/javascript'>
+          function confirmPass(input) {
+              if (input.value != document.getElementById('password').value) {
+                  input.setCustomValidity('The two passwords must match.');
+              } else {
+                  // input is valid -- reset the error message
+                  input.setCustomValidity('');
+             }
+          }
+        </script>
       </div>
       <div id="checkboxes1" data-role="fieldcontain">
         <fieldset data-role="controlgroup" data-type="vertical" data-mini="true">
